- flexPTP updated - README updated - lwipopts updated

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Modules/embfmt"]
 	path = Modules/embfmt
-	url = git@epagris.com:epagris/embfmt.git
+	url = https://gitea.epagris.com/epagris/embfmt
 [submodule "Modules/lwip"]
 	path = Modules/lwip
 	url = https://github.com/lwip-tcpip/lwip.git
@@ -9,7 +9,7 @@
 	url = https://github.com/STMicroelectronics/stm32h7xx-hal-driver.git
 [submodule "Modules/flexptp"]
 	path = Modules/flexptp
-	url = git@epagris.com:epagris/flexPTP.git
+	url = https://github.com/epagris/flexPTP
 [submodule "Modules/etherlib"]
 	path = Modules/etherlib
-	url = git@epagris.com:epagris/EtherLib.git
+	url = https://gitea.epagris.com/epagris/EtherLib
