--- a/Modules/CMakeLists.txt
+++ b/Modules/CMakeLists.txt
@@ -59,4 +59,5 @@ set(FLEXPTP_INCLUDES ${include_dirs} ${LWIP_DIR}/src/include ${LWIP_PORT_DIR}/in
 set(FLEXPTP_CPU_PARAMS ${cpu_PARAMS})
 set(FLEXPTP_COMPILE_DEFS ${symbols_c_SYMB})
 add_subdirectory(flexptp)
+target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${FLEXPTP_INCLUDE_EXPORT})
 target_link_libraries(${CMAKE_PROJECT_NAME} flexptp)
